[gd_scene load_steps=10 format=3 uid="uid://1xk5wti8s40u"]

[ext_resource type="Texture2D" uid="uid://dxk44sasa0wxs" path="res://_ Assets/GFX/UI books & more.png" id="1_l5x3c"]
[ext_resource type="Script" uid="uid://d0spnvt7qym33" path="res://scenes/Roll Archetype/roll_archetype.gd" id="1_n7tss"]
[ext_resource type="FontFile" uid="uid://bhsrjpc302k7w" path="res://_ Assets/Clarity.ttf" id="2_4mnbg"]
[ext_resource type="Texture2D" uid="uid://b17qaj8ja8v75" path="res://_ Assets/GFX/Peasant.png" id="4_5n470"]
[ext_resource type="Texture2D" uid="uid://c5lb61v32vfa7" path="res://_ Assets/GFX/_archive/3stars.png" id="4_e7atn"]
[ext_resource type="AudioStream" uid="uid://ywfnlo1333o0" path="res://_ Assets/sfx/armor.mp3" id="6_w1ghh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_urhkn"]
bg_color = Color(0, 0, 0, 0.470588)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 0.509804)
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="Animation" id="Animation_xju74"]
resource_name = "Slide"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.2),
"transitions": PackedFloat32Array(3.73, 2.21, 1),
"update": 0,
"values": [Vector2(740, 1180), Vector2(740, 780), Vector2(740, 800)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ns4nd"]
_data = {
&"Slide": SubResource("Animation_xju74")
}

[node name="RollArchetype" type="Node2D"]
script = ExtResource("1_n7tss")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 740.0
offset_top = 1180.0
offset_right = 740.0
offset_bottom = 1180.0
scale = Vector2(2, 2)

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_top = 127.0
offset_right = 127.0
offset_bottom = 377.0
rotation = 4.71239
texture = ExtResource("1_l5x3c")
region_rect = Rect2(561, 17, 46, 62)

[node name="Archetype" type="Label" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 20.0
offset_right = 476.0
offset_bottom = 78.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_4mnbg")
theme_override_font_sizes/font_size = 40
text = "ARCHETYPE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tooltip" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = -177.0
offset_top = 126.5
offset_right = 1050.0
offset_bottom = 198.5
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.901961, 0.901961, 0.901961, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_4mnbg")
theme_override_font_sizes/font_size = 24
text = "use !ReplaceArch to replace your current archetype with this one
or !KeepArch to keep your current archetype"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tooltip2" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = -252.0
offset_top = 125.5
offset_right = 437.0
offset_bottom = 165.5
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 1, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_4mnbg")
theme_override_font_sizes/font_size = 24
text = "!replacearch"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tooltip3" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = -180.5
offset_top = 143.5
offset_right = 508.5
offset_bottom = 183.5
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 1, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_4mnbg")
theme_override_font_sizes/font_size = 24
text = "!keeparch"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharSprite Panel" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 72.0
offset_top = 58.0
offset_right = 136.0
offset_bottom = 122.0
scale = Vector2(0.8, 0.8)
theme_override_styles/panel = SubResource("StyleBoxFlat_urhkn")

[node name="CharacterSprite" type="Sprite2D" parent="Control/CharSprite Panel"]
texture_filter = 1
position = Vector2(32, 32)
scale = Vector2(0.12, 0.12)
texture = ExtResource("4_5n470")

[node name="Stars" type="Sprite2D" parent="Control/CharSprite Panel"]
position = Vector2(98.75, 30)
scale = Vector2(0.109863, -0.109863)
texture = ExtResource("4_e7atn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ns4nd")
}

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_w1ghh")
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
